--- a/css/FHSched_V_1.14.css
+++ b/css/FHSched_V_1.14.css
@@ -6,23 +6,11 @@ body
   transition: background-color 0.3s;
   transition: background-image 0.3s;
 }
-body.dark
-{
-  background-image: url("../images/inverted_background.png");
-  background-color: black;
-  color: white;
-  transition: background-color 0.3s;
-  transition: background-image 0.3s;
-}
 
 a:link {
   color: black;
   background-color: transparent;
   text-decoration: underline;
-}
-body.dark a:link
-{
-  color: white;
 }
 
 a:visited {
@@ -30,28 +18,17 @@ a:visited {
   background-color: transparent;
   text-decoration: underline;
 }
-body.dark a:visited
-{
-  color: white;
-}
 
 a:hover {
-  color: dimgray;
+  color: RGB(105,105,105);
   background-color: transparent;
   text-decoration: underline;
-}
-body.dark a:hover
-{
-  color: darkgray;
 }
 
 a:active {
-  color: dimgray;
+  color: RGB(105,105,105);
   background-color: transparent;
   text-decoration: underline;
-}
-body.dark a:active {
-  color: darkgray;
 }
 
 .header
@@ -67,24 +44,13 @@ body.dark a:active {
   padding-top: 15px;
   padding-bottom: 0px;
   margin: auto;
-  border-bottom: white 5px solid;
   transition: background-color 0.3s;
 }
-body.dark .header
-{
-  background-color:firebrick;
-  transition: background-color 0.3s;
-}
-
 .header a
 {
   color: white;
   background-color: transparent;
   text-decoration: none;
-}
-body.dark .header a
-{
-  color: white;
 }
 
 .slider
@@ -101,11 +67,6 @@ body.dark .header a
   font-size: 30px;
   margin: 0px;
   padding: 15px;
-  transition: all 0.3s;
-}
-body.dark .slider
-{
-  background-color: rgb(100,0,0,0.9);
   transition: all 0.3s;
 }
 .slider.active
@@ -134,7 +95,7 @@ body.dark .slider
 .slider li a:hover
 {
   background: rgb(70,0,0,0.7);
-  color: darkgray;
+  color: RGB(160,160,160);
 }
 .slider .close-sidebar
 {
@@ -171,6 +132,10 @@ body.dark .slider
   top: 4px;
   right: 4px;
 }
+.ng-logo-a:hover
+{
+  cursor: pointer;
+}
 .ng-logo
 {
   height: 87px;
@@ -180,7 +145,7 @@ body.dark .slider
 {
   font-size: 22px;
   font-family: sans-serif;
-  background-color:rgba(255,0,0,0.8);
+  background-color:RGB(255,0,0,0.8);
   position: fixed;
   bottom: -120px;
   left: 0px;
@@ -200,7 +165,7 @@ body.dark .slider
 }
 .national-guard-banner a:hover
 {
-  color: darkgray;
+  color: RGB(160,160,160);
 }
 .national-guard-banner .container
 {
@@ -240,11 +205,6 @@ body.dark .slider
   border-radius: 45px;
   transition: background-color 0.3s;
 }
-body.dark .ham-a
-{
-  background-color: firebrick;
-  transition: background-color 0.3s;
-}
 .ham-a.active
 {
   display: none;
@@ -253,316 +213,14 @@ body.dark .ham-a
 {
   background-color: darkred;
 }
-body.dark .ham-a:hover
-{
-  background-color: RGB(120,0,0);
-}
 .ham
 {
   position: absolute;
   margin: auto;
-  height: 75px;
-  width: 75px;
-  top: 5px;
-  left: 5px;
-}
-
-.privacy_policy
-{
-  margin:20px;
-  font-family: sans-serif;
-}
-.privacy_policy h1
-{
-  margin-bottom:10px;
-  font-weight: bold;
-}
-.privacy_policy h2
-{
-  font-weight: bold;
-}
-
-.time-schedule
-{
-  margin-top: 0px;
-  position:relative;
-  text-align:center;
-  font-family: "anton", verdana;
-  letter-spacing: 5px;
-  height:220px;
-  width: 70%;
-  margin: auto;
-  border-radius: 20px;
-  background-color:lightgray;
-  transition: background-color 0.3s;
-}
-body.dark .time-schedule
-{
-  color: white;
-  background-color:rgb(30,34,39);
-  transition: background-color 0.3s;
-}
-
-.period-display
-{
-  font-size:30px;
-  margin-top: 50px;
-  margin-bottom: 0px;
-  padding: 10px 10px 0px;
-}
-
-.period-countdown
-{
-  letter-spacing: 5px;
-  font-family: "anton", verdana;
-  text-align:center;
-  font-size:40px;
-  margin-top: 40px;
-  margin-bottom: 0px;
-  padding: 10px;
-  transition: background-color 0.3s;
-}
-body.dark .period-countdown
-{
-  color: white;
-  transition: background-color 0.3s;
-}
-
-.remaining-time
-{
-  letter-spacing: 5px;
-  font-family: "anton", verdana;
-  text-align:center;
-  font-size:70px;
-  margin-top: 0px;
-  margin-bottom: 60px;
-  padding: 10px;
-}
-
-.timer
-{
-  font-size:70px;
-  padding: 0px 10px 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.dot
-{
-  outline: none;
-  border: none;
-  cursor: pointer;
-  height: 30px;
-  width: 30px;
-  background-color: white;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 0px 10px;
-}
-.dot-cur
-{
-  background-color: red;
-  transition: background-color 0.3s;
-}
-body.dark .dot-cur
-{
-  background-color:firebrick;
-  transition: background-color 0.3s;
-}
-.dot:hover
-{
-  background-color: gray;
-}
-body.dark .dot:hover {
-  background-color: darkgray;
-}
-
-.splash
-{
-  position: relative;
-  letter-spacing: 5px;
-  font-family:"anton";
-  text-align:center;
-  font-size: 40px;
-  margin-top: 10px;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  width:900px;
-  background-color: lightgray;
-  height: 245px;
-  border-radius: 20px;
-  margin: auto;
-  margin-bottom: 50px;
-  transition: background-color 0.3s;
-}
-body.dark .splash {
-  color: white;
-  background-color:rgb(30,34,39);
-  transition: background-color 0.3s;
-}
-
-.splash2
-{
-  position: relative;
-  letter-spacing: 5px;
-  font-family:"anton";
-  text-align:center;
-  font-size: 40px;
-  margin-top: 10px;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  width:900px;
-  background-color: lightgray;
-  height: 245px;
-  border-radius: 20px;
-  margin: auto;
-  margin-bottom: 50px;
-  transition: background-color 0.3s;
-}
-body.dark .splash2 {
-  color: white;
-  background-color:rgb(30,34,39);
-  transition: background-color 0.3s;
-}
-
-.btn
-{
-  outline: none;
-  height:220px;
-  border: none;
-  background-color: lightgray;
-  padding: 0px 35px 20px;
-  font-size: 100px;
-  cursor: pointer;
-  display: inline-block;
-  border-radius: 20px;
-  position: absolute;
-  top: 0px;
-  transition: all 0.3s;
-}
-body.dark .btn {
-  color: white;
-  background-color:rgb(30,34,39);
-  transition: all 0.3s;
-}
-
-.btn-left
-{
-  left: -125px;
-}
-.btn-right
-{
-  right: -125px;
-}
-.btn:hover
-{
-  background:gray;
-  transition: all 0s;
-}
-body.dark .btn:hover {
-  color: white;
-  background-color:rgb(40,44,49);
-  transition: all 0s;
-}
-
-.lunchBtnDiv
-{
-  display:block;
-  position: relative;
-  height: 270px;
-  letter-spacing: 5px;
-  font-family:"anton";
-  text-align:center;
-  margin:auto;
-}
-.lunchBtn
-{
-  font-family:"anton";
-  outline: none;
-  display: inline-block;
-  height:180px;
-  width: 180px;
-  border: none;
-  background-color: red;
-  padding: 10px;
-  font-size: 80px;
-  color: white;
-  cursor: pointer;
-  border-radius: 40px;
-  position: relative;
-  top: 0px;
-  margin: 0px 30px;
-  transition: all 0.3s;
-}
-body.dark .lunchBtn
-{
-  color:gainsboro;
-  background-color:firebrick;
-  transition: all 0.3s;
-}
-.lunchBtn:hover
-{
-  background:firebrick;
-  color: gainsboro;
-  transition: all 0s;
-}
-body.dark .lunchBtn:hover
-{
-  color:white;
-  background-color:red;
-  transition: all 0s;
-}
-.lunchBtn p
-{
-  font-size: 30px;
-  margin:0;
-}
-.wrongLunchDiv
-{
-  display:none;
-  position: relative;
-  height: 100px;
-  letter-spacing: 5px;
-  font-family:"anton";
-  text-align:center;
-  margin:auto;
-}
-.wrongLunchBtn
-{
-  font-family:"anton";
-  outline: none;
-  display: inline-block;
-  height: 100px;
-  width: 350px;
-  border: none;
-  background-color: red;
-  padding: 10px;
-  font-size: 40px;
-  color: white;
-  cursor: pointer;
-  border-radius: 20px;
-  position: relative;
-  top: 0px;
-  margin: 0px 30px;
-  transition: all 0.3s;
-}
-body.dark .wrongLunchBtn
-{
-  background-color:firebrick;
-  color:gainsboro;
-  transition: all 0.3s;
-}
-.wrongLunchBtn:hover
-{
-  background:firebrick;
-  color: gainsboro;
-  transition: all 0s;
-}
-body.dark .wrongLunchBtn:hover
-{
-  background-color:red;
-  color:white;
-  transition: all 0.0s;
+  height: 65px;
+  width: 65px;
+  top: 10px;
+  left: 10px;
 }
 
 .cookie-banner
@@ -623,7 +281,7 @@ footer
   bottom:0px;
   padding: 0px, 0px;
   width: 100%;
-  background-color: lightgray;
+  background-color: RGB(180,180,180);
   transition: background-color 0.3s;
 }
 @media screen and (orientation:landscape)
@@ -633,11 +291,6 @@ footer
     position:static;
     margin: 0px;
   }
-}
-body.dark footer
-{
-  background-color: rgb(30,34,39);
-  transition: background-color 0.3s;
 }
 footer ul
 {
@@ -667,4 +320,104 @@ footer ul li
   src: url(www.fhsched.com/fonts/Anton-Regular.ttf);
   font-style: normal;
   font-weight: 100;
+}
+
+@media screen and (orientation:portrait)
+{
+  .header
+  {
+    height:120px;
+    padding-top: 20px;
+    font-size: 75px;
+  }
+  .ng-logo-a
+  {
+    z-index: 50;
+    position: fixed;
+    top: 6px;
+    right: 6px;
+  }
+  .ng-logo
+  {
+    height: 127px;
+  }
+  .ham-a
+  {
+    z-index: 50;
+    position: fixed;
+    top: 6px;
+    left: 6px;
+    background-color: red;
+    height: 128px;
+    width: 128px;
+    border-radius: 80px;
+    transition: background-color 0.3s;
+  }
+  .ham
+  {
+    position: absolute;
+    margin: auto;
+    height: 98px;
+    width: 98px;
+    top: 15px;
+    left: 15px;
+  }
+  .national-guard-banner
+  {
+    font-size: 30px;
+    bottom: -240px;
+  }
+  .national-guard-banner .container
+  {
+    padding: 30px;
+  }
+  .national-guard-banner .container p
+  {
+    margin: 10px 0px;
+  }
+  .national-guard-banner .container .close-sidebar
+  {
+    top: 20px;
+    right: 20px;
+    border-radius: 60px;
+  }
+  .national-guard-banner .container .close-sidebar:hover
+  {
+    height:120px;
+    width:120px;
+  }
+  .national-guard-banner .close-icon
+  {
+    height: 120px;
+  }
+  .close-icon
+  {
+    height: 90px;
+  }
+  .slider
+  {
+    top: 0px;
+    left: -660px;
+    bottom: 0px;
+    right: 0px;
+    width: 600px;
+    font-size: 45px;
+    padding: 22px;
+  }
+  .slider li a
+  {
+    padding: 20px 0px;
+    width: 600px;
+  }
+  .slider .close-sidebar
+  {
+    top: 24px;
+    left: 536px;
+    border-radius: 45px;
+  }
+  .slider .close-sidebar:hover
+  {
+    height:90px;
+    width:90px;
+  }
 }
