--- a/css/Dark_Mode_1.0.css
+++ b/css/Dark_Mode_1.0.css
@@ -169,3 +169,13 @@ body.dark footer
   font-style: normal;
   font-weight: 100;
 }
+
+body.dark .about-header
+{
+  background-color:rgb(30,34,39);
+}
+body.dark .team
+{
+  background-color:rgb(30,34,39);
+  color: white;
+}
