--- a/css/Home_1.0.css
+++ b/css/Home_1.0.css
@@ -37,6 +37,14 @@
   padding: 10px 10px 0px;
 }
 
+.timer
+{
+  font-size:70px;
+  padding: 0px 10px 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .period-countdown
 {
   letter-spacing: 5px;
@@ -58,14 +66,6 @@
   margin-top: 0px;
   margin-bottom: 60px;
   padding: 10px;
-}
-
-.timer
-{
-  font-size:70px;
-  padding: 0px 10px 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
 
 .dot
@@ -90,33 +90,6 @@
   background-color: RGB(130,130,130);
 }
 
-.splash
-{
-  position: relative;
-  letter-spacing: 5px;
-  font-family:"anton";
-  text-align:center;
-  font-size: 40px;
-  margin-top: 10px;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  width:900px;
-  background-color: RGB(210,210,210);
-  height: 245px;
-  border-radius: 20px;
-  margin: auto;
-  margin-bottom: 50px;
-  transition: background-color 0.3s;
-}
-.splash a
-{
-  color: red;
-}
-.splash a:hover
-{
-  color: darkred;
-}
-
 .btn
 {
   outline: none;
@@ -132,7 +105,6 @@
   top: 0px;
   transition: all 0.3s;
 }
-
 .btn-left
 {
   left: -125px;
@@ -145,6 +117,32 @@
 {
   background: RGB(170,170,170);
   transition: all 0s;
+}
+
+.splash
+{
+  position: relative;
+  letter-spacing: 5px;
+  font-family:"anton";
+  text-align:center;
+  font-size: 40px;
+  margin-top: 10px;
+  padding: 10px 30px 0;
+  width:fit-content;
+  background-color: RGB(210,210,210);
+  height: 245px;
+  border-radius: 20px;
+  margin: auto;
+  margin-bottom: 50px;
+  transition: background-color 0.3s;
+}
+.splash a
+{
+  color: red;
+}
+.splash a:hover
+{
+  color: darkred;
 }
 
 .lunchBtnDiv
