Template_Mode now contains all editable elements to the calendar
the outline for the break countdown, the text for the break countdown, the background for the break countdown, the text for the splash, the background for the splash, the text for the calendar, and background image

--- a/css/Cherry_Mode_1.0.css
+++ b/css/Cherry_Mode_1.0.css
@@ -9,18 +9,34 @@ body.cherry
   transition: background-image 0.3s;
 }
 
-
-body.cherry .container1{
-color: rgb(220,60,60);
-
+body.cherry .container1
+{
+  color: RGB(220,50,50);
+  background: #aaa;
   transition: color 0.3s;
 }
-body.cherry .container2{
-color: rgb(220,60,60);
+
+body.cherry .container2
+{
+  color: RGB(220,50,50);
+  background: #aaa;
   transition: color 0.3s;
 }
+
+body.cherry .containerGreyRim{
+  background: #aaa;
+  transition: background-color 0.3s;
+}
+
+body.cherry .containerRim{
+  background: #FFF;
+  transition: background-color 0.3s;
+}
+
 body.cherry .featuredSportSplash{
-color: rgb(220,60,60);
+  color: rgb(220,60,60);
+  background: #aaa;
+  transition: color 0.3s;
 }
 
 body.cherry .dycalendar-month-container{
