--- a/css/Aqua_Mode_1.0.css
+++ b/css/Aqua_Mode_1.0.css
@@ -2,9 +2,7 @@
 
 body.aqua
 {
-  
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("../images/background.png");
   background: RGB(255,255,255));
   color: RGB(0,0,0);
   transition: background-color 0.3s;
@@ -14,18 +12,31 @@ body.aqua
 body.aqua .container1
 {
   color: RGB(0,120,255);
+  background: #aaa;
   transition: color 0.3s;
 }
 
 body.aqua .container2
 {
   color: RGB(0,120,255);
+  background: #aaa;
   transition: color 0.3s;
+}
+
+body.aqua .containerGreyRim{
+  background: #aaa;
+  transition: background-color 0.3s;
+}
+
+body.aqua .containerRim{
+  background: RGB(0,50,150);
+  transition: background-color 0.3s;
 }
 
 body.aqua .featuredSportSplash
 {
   color: RGB(0,120,255);
+  background: #aaa;
   transition:color 0.3s;
 }
 
