--- a/css/Cherry_Mode_1.0.css
+++ b/css/Cherry_Mode_1.0.css
@@ -9,34 +9,18 @@ body.cherry
   transition: background-image 0.3s;
 }
 
-body.cherry .container1
-{
-  color: RGB(220,50,50);
-  background: #aaa;
+
+body.cherry .container1{
+color: rgb(220,60,60);
+
   transition: color 0.3s;
 }
-
-body.cherry .container2
-{
-  color: RGB(220,50,50);
-  background: #aaa;
+body.cherry .container2{
+color: rgb(220,60,60);
   transition: color 0.3s;
 }
-
-body.cherry .containerGreyRim{
-  background: #aaa;
-  transition: background-color 0.3s;
-}
-
-body.cherry .containerRim{
-  background: #FFF;
-  transition: background-color 0.3s;
-}
-
 body.cherry .featuredSportSplash{
-  color: rgb(220,60,60);
-  background: #aaa;
-  transition: color 0.3s;
+color: rgb(220,60,60);
 }
 
 body.cherry .dycalendar-month-container{
