--- a/css/FHSched_V_1.15.css
+++ b/css/FHSched_V_1.15.css
@@ -86,8 +86,7 @@ a:active {
   float: left;
   display: block;
   color: white;
-  text-align: center;
-  padding: 14px 0px;
+  padding: 14px;
   width: 400px;
   text-decoration: none;
   cursor: pointer;
@@ -96,6 +95,56 @@ a:active {
 {
   background: rgb(70,0,0,0.7);
   color: RGB(160,160,160);
+}
+.slider #add-theme.active #a-add-theme
+{
+  display: none;
+}
+.slider #input-theme
+{
+  display: none;
+}
+.slider #add-theme.active #input-theme
+{
+  padding: 7px;
+  display: block;
+}
+.slider li input
+{
+  outline: none;
+  float: left;
+  display: block;
+  color: black;
+  padding: 2px 10px;
+  height: 46px;
+  width: 200px;
+  font-size: 30px;
+  font-family: verdana, sans-serif;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0px;
+}
+.slider li button
+{
+  outline: none;
+  float: left;
+  display: block;
+  border-radius: 10px;
+  background-color: RGB(210,210,210);
+  color: black;
+  padding: 6px 10px;
+  margin-left: 20px;
+  height: 50px;
+  width: 100px;
+  font-size: 30px;
+  font-family: verdana, sans-serif;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0px;
+}
+.slider li button:hover
+{
+  background-color: RGB(170,170,170);
 }
 .slider .close-sidebar
 {
@@ -408,8 +457,28 @@ footer ul li
   }
   .slider li a
   {
-    padding: 20px 0px;
+    padding: 20px;
     width: 600px;
+  }
+  .slider #add-theme.active #input-theme
+  {
+    padding: 10px;
+  }
+  .slider li input
+  {
+    padding: 3px 15px;
+    height: 68px;
+    width: 300px;
+    font-size: 45px;
+  }
+  .slider li button
+  {
+    border-radius: 15px;;
+    padding: 10px 15px;
+    margin-left: 30px;
+    height: 74px;
+    width: 150px;
+    font-size: 45px;
   }
   .slider .close-sidebar
   {
