Optimized the about page for halloween mode

--- a/css/Halloween_Mode_1.0.css
+++ b/css/Halloween_Mode_1.0.css
@@ -288,7 +288,7 @@ body.halloween .about-header
 body.halloween .team
 {
   background-color:rgb(255,255,255);
-  color: red;
+  color: black;
 }
 /* body.halloween .mode-img{
   content: url("css-dep/great-pumpkin.png");
